--- a/plugin/motd.j2
+++ b/plugin/motd.j2
@@ -25,6 +25,11 @@ For older releases, see https://github.com/{{ githubRepository }}/releases
 <SHA256>{{ checksum }}</SHA256>
 </FILE>
 
+<FILE Name="{{ configDirectory }}/figurine_linux_amd64_{{ figurineVersion }}.tar.gz">
+<URL>https://github.com/arsham/figurine/releases/download/{{ figurineVersion }}/figurine_linux_amd64_{{ figurineVersion }}.tar.gz</URL>
+<SHA256>{{ figurineSHA256 }}</SHA256>
+</FILE>
+
 <!--
 The 'install' script.
 -->
@@ -32,8 +37,11 @@ The 'install' script.
 <INLINE>
 <![CDATA[
 
+tar xf {{ configDirectory }}/figurine_linux_amd64_{{ figurineVersion }}.tar.gz -C /usr/local/bin/ --strip-components=1 deploy/figurine
+
 # cleanup old versions
 rm -f $(ls {{ configDirectory }}/unraid-motd-*.txz 2>/dev/null | grep -v '{{ version }}')
+rm -f $(ls {{ configDirectory }}/figurine_linux_amd64_*.tar.gz 2>/dev/null | grep -v '{{ figurineVersion }}')
 
 echo ""
 echo "----------------------------------------------------"
@@ -52,6 +60,8 @@ The 'remove' script.
 <INLINE>
 <![CDATA[
 removepkg unraid-figurine
+
+rm -f /usr/local/bin/figurine
 
 rm -rf {{ pluginDirectory }}
 rm -rf {{ configDirectory }}
