docs: update support url

--- a/plugin/motd.j2
+++ b/plugin/motd.j2
@@ -6,9 +6,9 @@
   author="Derek Kaser"
   version="{{ version }}"
   pluginURL="https://raw.githubusercontent.com/{{ githubRepository }}/main/plugin/{{ name }}.plg"
-  support="https://github.com/{{ githubRepository }}/issues"
+  support="https://forums.unraid.net/topic/177200-support-motd-message-of-the-day/"
   min="6.11.5"
-  icon="fa-wrench"
+  icon="fa-desktop"
 >
 
 <CHANGES>
