--- a/plugin/motd.j2
+++ b/plugin/motd.j2
@@ -59,9 +59,10 @@ The 'remove' script.
 <FILE Run="/bin/bash" Method="remove">
 <INLINE>
 <![CDATA[
-removepkg unraid-figurine
+removepkg unraid-motd
 
 rm -f /usr/local/bin/figurine
+rm -f /usr/local/bin/motd
 
 rm -rf {{ pluginDirectory }}
 rm -rf {{ configDirectory }}
